browser/css/color-palette-dark.css
[data-theme='dark'] {
	/*LibreOffice Colors: https://wiki.documentfoundation.org/Marketing/Branding#Colors
	----------------------------------[to do]*/
	--blue1-txt-primary-color: 3, 105, 163;
	--green0-txt-primary-color: 16, 104, 2; /*green1 lacks contrast against white*/
	--orange1-txt-primary-color: 163, 62, 3;
	--yellow0-txt-primary-color: 135, 105, 0; /*yellow1 lacks contrast against white*/

	--color-main-text: #e8e8e8;
	--color-text-dark: #e8e8e8;  /* select */
	--color-text-darker: #c0bfbc;  /* hover */
	--color-text-lighter: #fff; /* secondard text, disabled */
	--color-status-badge: #d6d6d6;
	--color-slideshow: #d6d6d6;
	--color-date-text: #d6d6d6;

	--color-main-background: #121212;
	--color-background-dark: #1E1E1E;  /* select */
	--color-background-darker: #000;  /* todo: apply to pressed (active), li:hover(top menu on classic mode)*/
	--color-background-slideshow: #171717;
	--color-background-lighter: #262626; /* hover, toolbar, dialog, disabled */
	--color-overlay: #1c5fa814;
	--color-background-tabs-group: #303030;
	--color-stylesview-background: white;
	--brightness-stylesview: 0.9;

	--color-canvas: #141414;

	--color-primary: #0b87e7; /* border-color */
	--color-primary-text: #fff; /* text color when primary-lighter is background */
	--color-primary-dark: #0063b1;
	--color-primary-darker: #004b86;
	--color-primary-lighter: #83beec; /* background-color */

	--color-border: #121212;
	--color-border-dark: #1E1E1E; /* select */
	--color-border-darker: #000;  /* hover */
	--color-border-dark-63: #5e5e5e;
	--color-border-lighter: #303030; /* disabled */

	--color-btn-border: #b6b6b6;
	--color-btn-border-dis: #c0bfbc;

	--color-stylesview-border: var(--color-toolbar-border);
	--color-toolbar-border: #323130;


	--color-error: #e9322d;
	--color-warning: #eca700;
	--color-success: #46ba61;

	--color-box-shadow-light: rgba(0, 0, 0, 0.1);
	--color-box-shadow: rgba(0, 0, 0, 0.5);
	--color-hyperlink: #1d99f3;

	--color-calc-grid: #474747;
	--color-calc-header: #0a0a0a;
	--color-calc-header-selected: #646464;
	--color-calc-header-hover: #646464;

	--color-calc-header-sheetview: #57685D;
	--color-calc-header-sheetview-selected: #11370B;
	--color-calc-header-sheetview-hover: #fff;

	--color-text-calc-header-selected: #fff;
	--color-text-calc-header-sheetview-selected: #f0f0f0;

	--color-border-calc-header: var(--color-border-dark);
	--column-row-highlight: #B0B0B0;

	--color-grid-helper-line-solid: #e6e6e6;
	--color-grid-helper-line-dashed: #191919;
	--color-smart-guides-helper-line: #f36d4f;

	--color-quickfind-border: #444;
	--scrollbar-color: #c0bfbc transparent;
	--color-background-hover: #363636;

	--color-backstage-background: #1E1E1E;
	--color-backstage-background-dark: #121212;
}

[data-bg-theme='dark'] {
	--color-cursor-blink-background: #fff;
	--color-background-document: #121212;
}

