fix: use different colors for annotation-line in light/dark modes
- before this change it was black for both light and dark mode
- in dark mode, black on black was hardly visible

--- a/browser/css/color-palette-dark.css
+++ b/browser/css/color-palette-dark.css
@@ -13,6 +13,7 @@
 	--color-status-badge: #d6d6d6;
 	--color-slideshow: #d6d6d6;
 	--color-date-text: #d6d6d6;
+	--color-annotation-line: #c0bfbc;
 
 	--color-main-background: #121212;
 	--color-background-dark: #1E1E1E;  /* select */
